# nclaude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: MULTI_CLAUDE_ARCHITECTURE.md  clawdbot-integration.md  protocol.md  reference.md  swarm.md
hooks/: hooks.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: ask.md  gchat.md  lock.md  locks.md  progress.md  refresh.md  reply.md  status.md  task.md  unlock.md
plugin/hooks/: check-messages.sh  hooks.json  notify-send.sh  session-init.sh  stop-check.sh
plugin/lib/: gchat_bridge.py
scripts/: cdp_injector.js  client.py  hub.py  injector.py  nclaude-hook.py  nclaude-tmux.sh  nclaude.py  nclaude.tmuxinator.yml  orchestrator.py  receipts.py  swarm.py  swarm_daemon.py  test_hub_client.py  test_stdin.py
services/launchd/: com.nclaude.hub.plist
src/nclaude/: __init__.py  cli.py
src/nclaude/rooms/: base.py
src/nclaude/transports/: __init__.py  gchat.py
