[project]
name = "nclaude"
version = "3.1.0"
description = "Headless Claude-to-Claude messaging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aqua-coord>=0.5.0",
    "python-multipart>=0.0.22",  # CVE fix: path traversal in file uploads
]

[project.optional-dependencies]
mcp = ["mcp"]
dev = ["pytest>=7.0"]

[project.scripts]
nclaude = "nclaude.__main__:main"
nclaude-legacy = "scripts.nclaude:main"
swarm = "scripts.swarm_daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nclaude", "scripts"]

[tool.uv]
dev-dependencies = ["pytest>=7.0"]
